<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Param_XmlControl" Id="{69588962-bd3e-4958-957e-7bfb94609af1}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    // Enable (TRUE) or Disable (FALSE) publishing of the JUnit Xml report
    EnablePublish : BOOL := TRUE; 
    // Maximum filesize in bytes (64 kb default, reserved in PLC memory)
    MaxFileSize : UDINT := 65535;
    // Filepath for testresults.xml, e.g.: for use with jenkins 
    FilePath : T_MaxString := 'C:\testresults.xml';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>